# vamos-sources

./: .git-blame-ignore-revs  .gitignore  .pylintrc  .pyre_configuration  CMakeLists.txt  README.md  config.py.in  interactive  regex-drrio-rw.c  regex-drrio.c  regex.c  runnums.sh  runprimes-good.sh  sendaddr.c  sendaddr.sh  vsrc  vsrcc
bcc/: syscall-write.py
bcc/bpf-core/: CMakeLists.txt  syswrite.c
bcc/bpf-core/cmake/: FindBpfObject.cmake  README.md
cmake/vamos-sources/: vamos-sources-config.cmake.in
drfun/: CMakeLists.txt  calls.c  funs-inline.c  funs.c
drregex/: CMakeLists.txt  regex-mt.c  regex.c
drregexrw/: CMakeLists.txt  regexrw.c
drsyscalls/: CMakeLists.txt  syscalls.c
ext/: Makefile
gen-regex/: drio-stdin.c.in  emit_shm.py  gen.py  gen_bpf.py  gen_drio.py  gen_stdin.py  regex.c.in  utils.py
legacy/bpf/: program.bpf.c
llvm/: CMakeLists.txt  RaceInstrumentation.cpp  VarAddr.cpp
python/vamos_sources/codegen/: codegen.py  codegencpp.py
python/vamos_sources/codegen/cpp/: base.py  codegen.py  expr.py  stmt.py
python/vamos_sources/codegen/cpp/templates/: main.cpp  trace.h
python/vamos_sources/codegen/templates/cpp/: CMakeLists.txt.in  event_and_id.h  main.cpp  new_trace.h  trace.h
python/vamos_sources/codegen/templates/cpp/partials/: src-is_in.h
python/vamos_sources/interpreter/: interpreter.py  iterators.py  module.py  state.py  typemethods.py  value.py
python/vamos_sources/modules/: _common.py  dbg.py  rand.py
python/vamos_sources/modules/file/: __init__.py  file.py
python/vamos_sources/modules/file/codegen/cpp/: file-reader.h
python/vamos_sources/spec/: _cmd.py  cmd.py  compiler.py  main.py
python/vamos_sources/spec/interpreter/: interpreter.py  iterators.py  state.py  typemethods.py  value.py
python/vamos_sources/spec/ir/: constant.py  element.py  expr.py  ir.py  type.py
python/vamos_sources/spec/modules/: _common.py  _method.py  common.py  dbg.py  file.py  rand.py  regex.py  string.py
python/vamos_sources/spec/modules/common/: __init__.py  common.py
python/vamos_sources/spec/modules/common/codegen/cpp/: common-range.h
python/vamos_sources/spec/modules/file/codegen/cpp/: file-reader.h
python/vamos_sources/spec/parser/: ast.py  context.py  decls.py  parser.py
python/vamos_sources/spec/parser/grammars/: comm.lark  grammar.lark  types.lark
racetest/: compile.sh  simpletest.c  test.c  tsan_impl.c
spec/: main.py
spec/interpreter/: interpreter.py  iterators.py  method.py  module.py  out.py  state.py  typemethods.py  value.py
spec/ir/: constant.py  element.py  expr.py  ir.py  type.py
spec/modules/: common.py  dbg.py  file.py  rand.py  regex.py  string.py
spec/parser/: ast.py  decls.py  element.py  parser.py  transition.py
spec/parser/grammars/: events.lark  expr.lark  grammar.lark
src/: CMakeLists.txt  regex.c  sendaddr.c
src/bcc/: syscall-write.py
src/bcc/bpf-core/: syswrite.bpf.c  syswrite.c
src/drfun/: calls.c  eventspec.h  funs-inline.c  funs.c
src/drregex/: CMakeLists.txt  regex-mt.c  regex.c
src/drregexrw/: CMakeLists.txt  regexrw.c
src/drsyscalls/: syscalls.c
src/legacy/bpf/: Makefile  loader.c
src/libinput/: CMakeLists.txt  libinput-debug-events.c  shared.c  shared.h  util-macros.h  util-strings.c  util-strings.h
src/llvm/: CMakeLists.txt  RaceInstrumentation.cpp  VarAddr.cpp
src/llvm/store-load/: CMakeLists.txt  StoreLoadInstrumentation.cpp  impl.c
src/llvm/store-load/impl/: CMakeLists.txt  impl.c
src/tsan/: compile.py  tsan_impl.c
src/wldbg/: CMakeLists.txt  pass.c  wldbg-source
tests/: CMakeLists.txt  foreach1.out.txt  foreach1.vsrc  foreach1.vsrc.out.txt  foreach2.vsrc  foreach2.vsrc.out.txt  foreach3.vsrc  foreach4.vsrc  foreach4.vsrc.out.txt  foreach5.vsrc  lines1.txt  lines1.vsrc  llvm1.vsrc  procs1.vsrc  rand1.vsrc  regex1.txt  regex1.vsrc  regex1.vsrc.out.txt  regex2.vsrc  run-diff.sh
tsan/: compile.py  compile.sh  test.c  tsan_impl.c
vamos_sources/codegen/cpp/: expr.py  stmt.py
vamos_sources/codegen/cpp/templates/: htrace.h  main.cpp  new_trace.h  stdout_trace.h  trace.h
vamos_sources/codegen/cpp/templates/partials/: src-is_in.h
vamos_sources/interpreter/: interpreter.py  iterators.py  method.py  out.py  state.py  typemethods.py  value.py
vamos_sources/modules/: dbg.py  rand.py
vamos_sources/modules/common/: common.py
vamos_sources/modules/common/codegen/cpp/: common-range.h
vamos_sources/modules/file/: file.py
vamos_sources/modules/file/codegen/cpp/: file-reader.h
vamos_sources/spec/: _cmd.py
vamos_sources/spec/ir/: expr.py  ir.py
vamos_sources/spec/parser/: ast.py  parser.py
vamos_sources/spec/parser/grammars/: grammar.lark  types.lark
