if (NOT wldbg_DIR)
        find_program(WLDBG_EXT NAMES wldbg PATHS ${CMAKE_SOURCE_DIR}/ext/wldbg/src NO_DEFAULT_PATH)
        if (WLDBG_EXT)
	        message(STATUS "Assuming that wldbg is in '${CMAKE_SOURCE_DIR}/ext/wldbg/'. To use a different build, set wldbg_DIR to the root directory of wldbg" )
                set(wldbg_DIR ${CMAKE_SOURCE_DIR}/ext/wldbg CACHE STRING "" FORCE)
        else()
	        message(FATAL_ERROR "Need to know where wldbg is. Set wldbg_DIR to the root directory of wldbg or build wldbg with\n\nmake -c ext wldbg" )
        endif()
endif()

find_program(WLDBG NAMES wldbg PATHS ${wldbg_DIR}/src REQUIRED)
message(STATUS "wldbg is ${WLDBG}")

add_library(wldbg-pass SHARED pass.c)
target_include_directories(wldbg-pass PRIVATE ${wldbg_DIR}/src)
target_link_libraries(wldbg-pass PUBLIC vamos-buffers-client)
